--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -38,6 +38,7 @@
     "formik": "^2.4.2",
     "idb-keyval": "^6.2.1",
     "isomorphic-fetch": "^3.0.0",
+    "pem-file": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
