reverted unnecessary dependencies

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,8 +1,7 @@
 {
   "name": "icrc1-payment-client-frontend",
   "version": "1.0.0",
-  "description": "Frontend of ICRC1 payment client dapp.",
-  "main": "index.js",
+  "description": "Frontend of ICRC1 Payment Client Dapp",
   "type": "module",
   "scripts": {
     "build": "vite build",
@@ -31,14 +30,12 @@
     "@dfinity/auth-client": "^0.15.6",
     "@dfinity/candid": "^0.15.6",
     "@dfinity/identity": "^0.18.0",
-    "@dfinity/identity-secp256k1": "^0.16.0",
     "@dfinity/principal": "^0.15.6",
     "bigdecimal": "^0.6.1",
     "buffer": "^6.0.3",
     "formik": "^2.4.2",
     "idb-keyval": "^6.2.1",
     "isomorphic-fetch": "^3.0.0",
-    "pem-file": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
