--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@dfinity/utils": "^0.0.18",
     "common-tags": "^1.8.2",
     "dotenv": "^16.3.1",
+    "ic-mops": "^0.19.1",
     "mo-dev": "^0.10.1",
     "zx": "^7.2.3"
   },
