--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "Point of Sale"
   ],
   "scripts": {
-    "ci:all": "cd src/frontend; npm ci --legacy-peer-deps; cd ../..; cd src/workbench; npm ci --legacy-peer-deps; cd ../..; npm ci --legacy-peer-deps",
+    "ci:all": "cd src/frontend; npm ci --legacy-peer-deps; cd ../..; cd src/test; npm ci --legacy-peer-deps; cd ../..; cd src/workbench; npm ci --legacy-peer-deps; cd ../..; npm ci --legacy-peer-deps",
     "test": "npm run ci:all; node ./setup.js --testing; cd src/test; npm run test:auto",
     "setup": "npm run ci:all; node ./setup.js",
     "build": "cd src/frontend; npm run build",
@@ -33,7 +33,7 @@
     "postinstall": "mops install"
   },
   "engines": {
-    "node": "^18"
+    "node": "^12 || ^14 || ^16 || ^18"
   },
   "dependencies": {
     "@dfinity/agent": "^0.17.0",
