--- a/src/workbench/package.json
+++ b/src/workbench/package.json
@@ -19,15 +19,13 @@
     "@dfinity/identity-secp256k1": "^0.16.0",
     "@dfinity/ledger": "^0.0.10",
     "@dfinity/nns": "^0.16.2",
-    "@dfinity/nns-proto": "^0.0.3",
     "@dfinity/principal": "^0.15.7",
-    "@dfinity/sns": "^0.0.17",
     "@dfinity/utils": "^0.0.17",
     "bigdecimal": "^0.6.1",
-    "bn.js": "^5.2.1",
     "chalk": "^5.3.0",
     "common-tags": "^1.8.2",
     "dotenv": "^16.3.1",
+    "isomorphic-fetch": "^3.0.0",
     "lorem-ipsum": "^2.0.8",
     "pem-file": "^1.0.1",
     "sha256": "^0.2.0",
